FAQ section mobile styling fixes

--- a/pages/funnel/Funnel.module.css
+++ b/pages/funnel/Funnel.module.css
@@ -27,7 +27,7 @@
             #DD962B,
             #f2ec53);
     text-align: left;
-    padding: 4rem 1rem;
+    padding: 3rem 1rem 5rem 1rem;
     text-align: center;
     margin: -7vh auto 0 auto;
     position: relative;
@@ -60,7 +60,7 @@
 
 @media screen and (min-width: 880px) {
     .diagonal {
-        padding: 4.5rem 5rem;
+        padding: 4rem 5rem 6rem 4rem;
     }
 }
 
@@ -243,8 +243,9 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 70vw;
+    width: 95vw;
     margin: 0 auto;
+    padding-left: 0;
 }
 
 .liContainer {
@@ -269,6 +270,12 @@
     letter-spacing: 1px;
     font-size: 1.2em;
     padding-left: 2rem;
+}
+
+@media screen and (min-width: 800px) {
+    .faqUl {
+        width: 70vw;
+    }
 }
 
 
